[features/app][ADD] routes + test and doc for twitter bookmarks request
