# apps/api/src/entities/data/data.routes.ts
@@ -11,6 +11,7 @@ router.get('/stats', DataController.getStats);
 router.get('/twitter/liked', verifyToken, DataController.getLikedTweets);
 router.get('/twitter/profile', verifyToken, DataController.getTwitterProfile);
 router.get('/twitter/search', verifyToken, DataController.searchTweets);
+router.get('/twitter/bookmarks', verifyToken, DataController.myBookMarks);
 
 
 export default router;
